@@ -1,3 +1,6 @@
+Thu Sep 29 2011 Sergey Basalaev
+	* .NET/Mono bindings to librhash
+
 Wed Sep 14 2011 Aleksey, SBasalaev
 	* LibRHash bindings to Java, Perl, Python, Ruby
 
